Remove unused fields